[gd_scene load_steps=35 format=2]

[ext_resource path="res://shader/highlight.tres" type="Material" id=1]
[ext_resource path="res://day_screen/character/customer/customer_leaving_state.gd" type="Script" id=2]
[ext_resource path="res://day_screen/character/customer/customer_waiting_state.gd" type="Script" id=3]
[ext_resource path="res://day_screen/character/customer/customer.gd" type="Script" id=4]
[ext_resource path="res://day_screen/state_machine.gd" type="Script" id=5]
[ext_resource path="res://assets/art/customer1.png" type="Texture" id=6]
[ext_resource path="res://day_screen/character/customer/customer_entering_state.gd" type="Script" id=7]
[ext_resource path="res://day_screen/character/customer/customer_consuming_state.gd" type="Script" id=8]
[ext_resource path="res://day_screen/interactive/interactive_receiver.tscn" type="PackedScene" id=9]
[ext_resource path="res://day_screen/character/customer/mood_new.tres" type="Texture" id=10]

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("BodySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=2]
resource_name = "idle_down"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("BodySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 7, 7 ]
}

[sub_resource type="Animation" id=3]
resource_name = "idle_left"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("BodySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 10, 10 ]
}

[sub_resource type="Animation" id=4]
resource_name = "idle_right"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("BodySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 4, 4 ]
}

[sub_resource type="Animation" id=5]
resource_name = "idle_up"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("BodySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 1, 1 ]
}

[sub_resource type="Animation" id=6]
resource_name = "run_down"
length = 0.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("BodySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 6, 7, 8, 7 ]
}

[sub_resource type="Animation" id=7]
resource_name = "run_left"
length = 0.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("BodySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 9, 10, 11, 10 ]
}

[sub_resource type="Animation" id=8]
resource_name = "run_right"
length = 0.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("BodySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 3, 4, 5, 4 ]
}

[sub_resource type="Animation" id=9]
resource_name = "run_up"
length = 0.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("BodySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 1 ]
}

[sub_resource type="AnimationNodeAnimation" id=10]
animation = "idle_down"

[sub_resource type="AnimationNodeAnimation" id=11]
animation = "idle_left"

[sub_resource type="AnimationNodeAnimation" id=12]
animation = "idle_right"

[sub_resource type="AnimationNodeAnimation" id=13]
animation = "idle_up"

[sub_resource type="AnimationNodeBlendSpace2D" id=14]
blend_point_0/node = SubResource( 10 )
blend_point_0/pos = Vector2( 0, 1 )
blend_point_1/node = SubResource( 11 )
blend_point_1/pos = Vector2( -1, 0 )
blend_point_2/node = SubResource( 12 )
blend_point_2/pos = Vector2( 1, 0 )
blend_point_3/node = SubResource( 13 )
blend_point_3/pos = Vector2( 0, -1.1 )
min_space = Vector2( -1, -1.1 )
max_space = Vector2( 1, 1.1 )
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id=15]
animation = "run_left"

[sub_resource type="AnimationNodeAnimation" id=16]
animation = "run_down"

[sub_resource type="AnimationNodeAnimation" id=17]
animation = "run_right"

[sub_resource type="AnimationNodeAnimation" id=18]
animation = "run_up"

[sub_resource type="AnimationNodeBlendSpace2D" id=19]
blend_point_0/node = SubResource( 15 )
blend_point_0/pos = Vector2( -1, 0 )
blend_point_1/node = SubResource( 16 )
blend_point_1/pos = Vector2( 0, 1.1 )
blend_point_2/node = SubResource( 17 )
blend_point_2/pos = Vector2( 1, 0 )
blend_point_3/node = SubResource( 18 )
blend_point_3/pos = Vector2( 0, -1.1 )
min_space = Vector2( -1.1, -1.1 )
max_space = Vector2( 1.1, 1.1 )
blend_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id=20]

[sub_resource type="AnimationNodeStateMachineTransition" id=21]

[sub_resource type="AnimationNodeStateMachine" id=22]
states/idle/node = SubResource( 14 )
states/idle/position = Vector2( 199.5, 87 )
states/run/node = SubResource( 19 )
states/run/position = Vector2( 388.5, 86.5 )
transitions = [ "idle", "run", SubResource( 20 ), "run", "idle", SubResource( 21 ) ]
start_node = "idle"

[sub_resource type="AnimationNodeStateMachinePlayback" id=23]

[sub_resource type="CapsuleShape2D" id=24]
radius = 2.0
height = 4.0

[node name="Customer" type="KinematicBody2D"]
collision_layer = 8
collision_mask = 0
script = ExtResource( 4 )
speed = 40.0

[node name="BodySprite" type="Sprite" parent="."]
material = ExtResource( 1 )
position = Vector2( 0, -10 )
texture = ExtResource( 6 )
hframes = 3
vframes = 4
region_rect = Rect2( 0, 0, 16, 18 )

[node name="BodyAnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 1 )
anims/idle_down = SubResource( 2 )
anims/idle_left = SubResource( 3 )
anims/idle_right = SubResource( 4 )
anims/idle_up = SubResource( 5 )
anims/run_down = SubResource( 6 )
anims/run_left = SubResource( 7 )
anims/run_right = SubResource( 8 )
anims/run_up = SubResource( 9 )

[node name="BodyAnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 22 )
anim_player = NodePath("../BodyAnimationPlayer")
active = true
parameters/playback = SubResource( 23 )
parameters/idle/blend_position = Vector2( -0.0107411, 0.00472093 )
parameters/run/blend_position = Vector2( 0, 0.103863 )

[node name="CharacterState" type="Node" parent="."]
script = ExtResource( 5 )
initial_state = NodePath("ConsumingState")

[node name="ConsumingState" type="Node" parent="CharacterState"]
script = ExtResource( 8 )

[node name="LeavingState" type="Node" parent="CharacterState"]
script = ExtResource( 2 )

[node name="EnteringState" type="Node" parent="CharacterState"]
script = ExtResource( 7 )

[node name="WaitingState" type="Node" parent="CharacterState"]
script = ExtResource( 3 )

[node name="Receiver" parent="." instance=ExtResource( 9 )]
interaction_time = 1.0

[node name="MoodIcon" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0 )
texture = ExtResource( 10 )
region_rect = Rect2( 496, 0, 16, 16 )

[node name="Tween" type="Tween" parent="."]

[node name="BodyShape" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource( 24 )

[connection signal="state_changed" from="CharacterState" to="." method="_on_CharacterState_state_changed"]
[connection signal="interaction_finished" from="Receiver" to="." method="_on_InteractiveReceiver_interaction_finished"]
[connection signal="targeted" from="Receiver" to="." method="_on_Receiver_targeted"]
[connection signal="untargeted" from="Receiver" to="." method="_on_Receiver_untargeted"]
